ansible/files/components/reactive-resume-dev-networkpolicy/network/reactive-resume-object-storage-allow-dev.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reactive-resume-object-storage-allow-dev
  namespace: shared-services
  annotations:
    cristex.io/source-service: reactive-resume-dev
    cristex.io/source-service-port: "8333"
  labels:
    app.kubernetes.io/name: reactive-resume-object-storage
    app.kubernetes.io/part-of: reactive-resume
    app.kubernetes.io/managed-by: ansible
    cristex.io/bootstrap-writer: ansible
    cristex.io/component: reactive-resume-dev-networkpolicy
    cristex.io/desired-owner: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: reactive-resume-object-storage
      app.kubernetes.io/part-of: reactive-resume
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cristexhub-dev
          podSelector:
            matchLabels:
              app.kubernetes.io/name: reactive-resume-dev
              app.kubernetes.io/part-of: cristexhub
      ports:
        - protocol: TCP
          port: 8333
